--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "description": "Bluejacket Framework",
     "keywords": ["bluejacket","main","framework","php"],
+    "type": "project",
     "authors": [
         {
             "name": "Oytun OZDEMIR",
