--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,6 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "preferred-install": "dev"
 }
