--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "preferred-install": "dev"
 }
