--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "bluejacket-labs/core": "dev-master"
+        "bluejacket-labs/core": "@dev"
     },
     "require-dev": {
         "bluejacket-labs/core": "dev-master"
