--- a/config/app.json
+++ b/config/app.json
@@ -1,5 +1,5 @@
 {
-  "application": "application",
+  "application": "app",
   "public": "public",
   "cache": "app/Cache",
   "route": "app/route.php"
