--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 vendor/
+logs/
 *.log
-bin/*
+bin/
 .DS_Store
 composer.lock
-/nbproject/private/
-/nbproject/
+nbproject/private/
+nbproject/
+.buildpath
+.settings/
+.project
